--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       </div>
       <div class="form">
         <form method="POST">
-          <input type="text" id="firstname" name="First Name" placeholder="First Name">
+          <input type="text" id="firstname" aria-labelledby="firstname" placeholder="First Name">
           <span class="firstname"></span>
-          <input type="text" id="lastname" name="Last Name" placeholder="Last Name">
+          <input type="text" id="lastname" aria-labelledby="lastname" placeholder="Last Name">
           <span class="lastname"></span>
-          <input type="email" id="email" name="Email" placeholder="Email Address">
+          <input type="email" id="email" aria-labelledby="email" placeholder="Email Address">
           <span class="email"></span>
-          <input type="password" id="password" name="Password" placeholder="Password">
+          <input type="password" id="password" aria-labelledby="password" placeholder="Password">
           <span class="password"></span>
           <button type="submit" id="btn">Claim your free trial</button>
         </form>
